// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakpoints matches existing token values in snapshot 1`] = `
{
  "desktop": 980,
  "leftCol": 1140,
  "mobile": 320,
  "mobileLandscape": 480,
  "mobileMedium": 375,
  "phablet": 660,
  "tablet": 740,
  "wide": 1300,
}
`;

exports[`palette matches existing token values in snapshot 1`] = `
{
  "brand": {
    "100": "#001536",
    "300": "#041F4A",
    "400": "#052962",
    "500": "#0077B6",
    "600": "#506991",
    "800": "#C1D8FC",
  },
  "brandAlt": {
    "200": "#F3C100",
    "300": "#FFD900",
    "400": "#FFE500",
  },
  "culture": {
    "100": "#3E3323",
    "200": "#574835",
    "300": "#6B5840",
    "350": "#866D50",
    "400": "#866D50",
    "450": "#A1845C",
    "50": "#2B2625",
    "500": "#EACCA0",
    "600": "#E7D4B9",
    "700": "#EFE8DD",
    "800": "#FBF6EF",
  },
  "error": {
    "400": "#C70000",
    "500": "#FF9081",
  },
  "focus": {
    "400": "#0077B6",
  },
  "labs": {
    "200": "#0C7A73",
    "300": "#65A897",
    "400": "#69D1CA",
  },
  "lifestyle": {
    "100": "#510043",
    "200": "#650054",
    "300": "#7D0068",
    "400": "#BB3B80",
    "450": "#F37ABC",
    "500": "#FFABDB",
    "600": "#FEC8D3",
    "800": "#FEEEF7",
  },
  "neutral": {
    "0": "#000000",
    "10": "#1A1A1A",
    "100": "#FFFFFF",
    "20": "#333333",
    "38": "#606060",
    "46": "#707070",
    "60": "#999999",
    "7": "#121212",
    "86": "#DCDCDC",
    "93": "#EDEDED",
    "97": "#F6F6F6",
  },
  "news": {
    "100": "#660505",
    "200": "#8B0000",
    "300": "#AB0613",
    "400": "#C70000",
    "500": "#FF5943",
    "550": "#FF9081",
    "600": "#FFBAC8",
    "800": "#FFF4F2",
  },
  "opinion": {
    "100": "#672005",
    "200": "#8D2700",
    "300": "#C74600",
    "400": "#C74600",
    "450": "#E05E00",
    "500": "#FF7F0F",
    "550": "#FF9941",
    "600": "#F9B376",
    "800": "#FEF9F5",
  },
  "specialReport": {
    "100": "#222527",
    "200": "#303538",
    "300": "#3F464A",
    "400": "#595C5F",
    "450": "#9DA0A2",
    "500": "#ABC2C9",
    "700": "#E4E5E8",
    "800": "#EFF1F2",
  },
  "specialReportAlt": {
    "100": "#2B2B2A",
    "200": "#B9300A",
    "300": "#FF663D",
    "700": "#EBE6E1",
    "800": "#F5F0EB",
  },
  "sport": {
    "100": "#003C60",
    "200": "#004E7C",
    "300": "#005689",
    "400": "#0077B6",
    "500": "#00B2FF",
    "600": "#90DCFF",
    "800": "#F1F8FC",
  },
  "success": {
    "400": "#22874D",
    "500": "#58D08B",
  },
}
`;

exports[`palette matches existing token values in snapshot 2`] = `
{
  "ctaPrimary": "#052962",
  "ctaPrimaryHover": "#234B8A",
  "ctaSecondary": "#C1D8FC",
  "ctaSecondaryHover": "#ACC9F7",
  "ctaTertiaryHover": "#E5E5E5",
  "input": "#FFFFFF",
  "inputChecked": "#0077B6",
  "inverse": "#1A1A1A",
  "primary": "#FFFFFF",
  "secondary": "#F6F6F6",
}
`;

exports[`palette matches existing token values in snapshot 3`] = `
{
  "ctaPrimary": "#FFFFFF",
  "ctaPrimaryHover": "#E0E0E0",
  "ctaSecondary": "#506991",
  "ctaSecondaryHover": "#234B8A",
  "ctaTertiaryHover": "#041F4A",
  "inputChecked": "#FFFFFF",
  "primary": "#052962",
}
`;

exports[`palette matches existing token values in snapshot 4`] = `
{
  "ctaPrimary": "#121212",
  "ctaPrimaryHover": "#454545",
  "ctaSecondary": "#F3C100",
  "ctaSecondaryHover": "#F2AE00",
  "ctaTertiaryHover": "#FFD213",
  "primary": "#FFE500",
}
`;

exports[`palette matches existing token values in snapshot 5`] = `
{
  "ctaTertiary": "#052962",
  "error": "#C70000",
  "focusHalo": "#0077B6",
  "input": "#999999",
  "inputActive": "#0077B6",
  "inputChecked": "#0077B6",
  "inputHover": "#0077B6",
  "primary": "#999999",
  "secondary": "#DCDCDC",
  "success": "#22874D",
}
`;

exports[`palette matches existing token values in snapshot 6`] = `
{
  "ctaTertiary": "#FFFFFF",
  "error": "#FF9081",
  "input": "#C1D8FC",
  "inputChecked": "#FFFFFF",
  "inputHover": "#FFFFFF",
  "primary": "#506991",
  "secondary": "#506991",
  "success": "#58D08B",
}
`;

exports[`palette matches existing token values in snapshot 7`] = `
{
  "ctaTertiary": "#121212",
}
`;

exports[`palette matches existing token values in snapshot 8`] = `
{
  "primary": "#DCDCDC",
}
`;

exports[`palette matches existing token values in snapshot 9`] = `
{
  "primary": "#506991",
}
`;

exports[`palette matches existing token values in snapshot 10`] = `
{
  "primary": "#121212",
}
`;

exports[`palette matches existing token values in snapshot 11`] = `
{
  "anchorPrimary": "#0077B6",
  "anchorSecondary": "#121212",
  "ctaPrimary": "#FFFFFF",
  "ctaSecondary": "#052962",
  "ctaTertiary": "#052962",
  "error": "#C70000",
  "groupLabel": "#121212",
  "groupLabelSupporting": "#707070",
  "inputChecked": "#052962",
  "inputError": "#121212",
  "inputHover": "#052962",
  "inputLabel": "#121212",
  "inputLabelSupporting": "#707070",
  "newsInverse": "#FF9081",
  "primary": "#121212",
  "success": "#22874D",
  "supporting": "#707070",
  "userInput": "#121212",
}
`;

exports[`palette matches existing token values in snapshot 12`] = `
{
  "anchorPrimary": "#FFFFFF",
  "anchorPrimaryHover": "#FFE500",
  "ctaPrimary": "#052962",
  "ctaSecondary": "#FFFFFF",
  "ctaTertiary": "#FFFFFF",
  "error": "#FF9081",
  "inputLabel": "#FFFFFF",
  "inputLabelSupporting": "#C1D8FC",
  "primary": "#FFFFFF",
  "success": "#58D08B",
  "supporting": "#C1D8FC",
  "userInput": "#FFFFFF",
}
`;

exports[`palette matches existing token values in snapshot 13`] = `
{
  "anchorPrimary": "#121212",
  "ctaPrimary": "#FFFFFF",
  "ctaSecondary": "#121212",
  "ctaTertiary": "#121212",
  "primary": "#121212",
  "supporting": "#999999",
}
`;

exports[`size matches existing token values in snapshot 1`] = `
{
  "medium": 44,
  "small": 36,
  "xsmall": 24,
}
`;

exports[`size matches existing token values in snapshot 2`] = `
{
  "medium": 30,
  "small": 26,
  "xsmall": 20,
}
`;

exports[`size matches existing token values in snapshot 3`] = `
{
  "ctaMedium": 44,
  "ctaSmall": 36,
  "ctaXsmall": 24,
  "iconMedium": 30,
  "iconSmall": 26,
  "iconXsmall": 20,
  "inputMedium": 44,
  "inputXsmall": 24,
}
`;

exports[`size matches existing token values in snapshot 4`] = `
{
  "ctaMedium": 2.75,
  "ctaSmall": 2.25,
  "ctaXsmall": 1.5,
  "iconMedium": 1.875,
  "iconSmall": 1.625,
  "iconXsmall": 1.25,
  "inputMedium": 2.75,
  "inputXsmall": 1.5,
}
`;

exports[`size matches existing token values in snapshot 5`] = `
{
  "ctaMedium": 44,
  "ctaSmall": 36,
  "ctaXsmall": 24,
  "iconMedium": 30,
  "iconSmall": 26,
  "iconXsmall": 20,
  "inputXsmall": 24,
}
`;

exports[`size matches existing token values in snapshot 6`] = `
{
  "ctaMedium": 2.75,
  "ctaSmall": 2.25,
  "ctaXsmall": 1.5,
  "iconMedium": 1.875,
  "iconSmall": 1.625,
  "iconXsmall": 1.25,
  "inputXsmall": 1.5,
}
`;

exports[`space matches existing token values in snapshot 1`] = `
{
  "0": 2,
  "1": 4,
  "10": 40,
  "12": 48,
  "14": 56,
  "16": 64,
  "18": 72,
  "2": 8,
  "24": 96,
  "3": 12,
  "4": 16,
  "5": 20,
  "6": 24,
  "8": 32,
  "9": 36,
}
`;

exports[`space matches existing token values in snapshot 2`] = `
{
  "0": "0.125rem",
  "1": "0.25rem",
  "10": "2.5rem",
  "12": "3rem",
  "14": "3.5rem",
  "16": "4rem",
  "18": "4.5rem",
  "2": "0.5rem",
  "24": "6rem",
  "3": "0.75rem",
  "4": "1rem",
  "5": "1.25rem",
  "6": "1.5rem",
  "8": "2rem",
  "9": "2.25rem",
}
`;

exports[`transitions matches existing token values in snapshot 1`] = `
{
  "long": ".65s ease-in-out",
  "medium": ".3s ease-in-out",
  "short": ".2s cubic-bezier(.64, .57, .67, 1.53)",
}
`;

exports[`typography matches existing API CSS output in snapshot 1`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 0.75rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 2`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 0.875rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 3`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 0.9375rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 4`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 1.0625rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 5`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 1.25rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 3px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 6`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 1.5rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 3px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 7`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 1.75rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 3px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 8`] = `
"
			font-family: GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
			font-size: 2.125rem;
			line-height: 1.3;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 4px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 9`] = `
"
			font-family: GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif;
			font-size: 0.875rem;
			line-height: 1.4;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 10`] = `
"
			font-family: GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif;
			font-size: 0.9375rem;
			line-height: 1.4;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 11`] = `
"
			font-family: GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif;
			font-size: 1.0625rem;
			line-height: 1.4;
			font-weight: 400;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 12`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 1.0625rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 2px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 13`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 1.25rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 3px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 14`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 1.5rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 3px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 15`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 1.75rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 3px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 16`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 2.125rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 4px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 17`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 2.625rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 5px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 18`] = `
"
			font-family: "GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
			font-size: 3.125rem;
			line-height: 1.15;
			font-weight: 500;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 6px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 19`] = `
"
			font-family: "GT Guardian Titlepiece", Georgia, serif;
			font-size: 2.625rem;
			line-height: 1.15;
			font-weight: 700;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 5px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 20`] = `
"
			font-family: "GT Guardian Titlepiece", Georgia, serif;
			font-size: 3.125rem;
			line-height: 1.15;
			font-weight: 700;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 6px;
		"
`;

exports[`typography matches existing API CSS output in snapshot 21`] = `
"
			font-family: "GT Guardian Titlepiece", Georgia, serif;
			font-size: 4.375rem;
			line-height: 1.15;
			font-weight: 700;
			;

			/*
			 * Child elements (e.g. <Link/>) can use this variable
			 * to set the thickness of their underline.
			 *
			 * The thickness for each font type and weight is defined
			 * in the underlineThickness object.
			 */
			--source-text-decoration-thickness: 6px;
		"
`;

exports[`typography matches existing API object output in snapshot 1`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "0.75rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 2`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "0.875rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 3`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "0.9375rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 4`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "1.0625rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 5`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "1.25rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 3,
}
`;

exports[`typography matches existing API object output in snapshot 6`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "1.5rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 3,
}
`;

exports[`typography matches existing API object output in snapshot 7`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "1.75rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 3,
}
`;

exports[`typography matches existing API object output in snapshot 8`] = `
{
  "fontFamily": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "fontSize": "2.125rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.3,
  "textDecorationThickness": 4,
}
`;

exports[`typography matches existing API object output in snapshot 9`] = `
{
  "fontFamily": "GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif",
  "fontSize": "0.875rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.4,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 10`] = `
{
  "fontFamily": "GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif",
  "fontSize": "0.9375rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.4,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 11`] = `
{
  "fontFamily": "GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif",
  "fontSize": "1.0625rem",
  "fontStyle": undefined,
  "fontWeight": 400,
  "lineHeight": 1.4,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 12`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "1.0625rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 2,
}
`;

exports[`typography matches existing API object output in snapshot 13`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "1.25rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 3,
}
`;

exports[`typography matches existing API object output in snapshot 14`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "1.5rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 3,
}
`;

exports[`typography matches existing API object output in snapshot 15`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "1.75rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 3,
}
`;

exports[`typography matches existing API object output in snapshot 16`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "2.125rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 4,
}
`;

exports[`typography matches existing API object output in snapshot 17`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "2.625rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 5,
}
`;

exports[`typography matches existing API object output in snapshot 18`] = `
{
  "fontFamily": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "fontSize": "3.125rem",
  "fontStyle": undefined,
  "fontWeight": 500,
  "lineHeight": 1.15,
  "textDecorationThickness": 6,
}
`;

exports[`typography matches existing API object output in snapshot 19`] = `
{
  "fontFamily": ""GT Guardian Titlepiece", Georgia, serif",
  "fontSize": "2.625rem",
  "fontStyle": undefined,
  "fontWeight": 700,
  "lineHeight": 1.15,
  "textDecorationThickness": 5,
}
`;

exports[`typography matches existing API object output in snapshot 20`] = `
{
  "fontFamily": ""GT Guardian Titlepiece", Georgia, serif",
  "fontSize": "3.125rem",
  "fontStyle": undefined,
  "fontWeight": 700,
  "lineHeight": 1.15,
  "textDecorationThickness": 6,
}
`;

exports[`typography matches existing API object output in snapshot 21`] = `
{
  "fontFamily": ""GT Guardian Titlepiece", Georgia, serif",
  "fontSize": "4.375rem",
  "fontStyle": undefined,
  "fontWeight": 700,
  "lineHeight": 1.15,
  "textDecorationThickness": 6,
}
`;

exports[`typography matches existing token values in snapshot 1`] = `
{
  "body": {
    "medium": 17,
    "small": 15,
    "xsmall": 14,
  },
  "headline": {
    "large": 42,
    "medium": 34,
    "small": 28,
    "xlarge": 50,
    "xsmall": 24,
    "xxsmall": 20,
    "xxxsmall": 17,
  },
  "textSans": {
    "large": 20,
    "medium": 17,
    "small": 15,
    "xlarge": 24,
    "xsmall": 14,
    "xxlarge": 28,
    "xxsmall": 12,
    "xxxlarge": 34,
  },
  "titlepiece": {
    "large": 70,
    "medium": 50,
    "small": 42,
  },
}
`;

exports[`typography matches existing token values in snapshot 2`] = `
{
  "body": {
    "medium": 1.0625,
    "small": 0.9375,
    "xsmall": 0.875,
  },
  "headline": {
    "large": 2.625,
    "medium": 2.125,
    "small": 1.75,
    "xlarge": 3.125,
    "xsmall": 1.5,
    "xxsmall": 1.25,
    "xxxsmall": 1.0625,
  },
  "textSans": {
    "large": 1.25,
    "medium": 1.0625,
    "small": 0.9375,
    "xlarge": 1.5,
    "xsmall": 0.875,
    "xxlarge": 1.75,
    "xxsmall": 0.75,
    "xxxlarge": 2.125,
  },
  "titlepiece": {
    "large": 4.375,
    "medium": 3.125,
    "small": 2.625,
  },
}
`;

exports[`typography matches existing token values in snapshot 3`] = `
{
  "body": "GuardianTextEgyptian, "Guardian Text Egyptian Web", Georgia, serif",
  "headline": ""GH Guardian Headline", "Guardian Egyptian Web", Georgia, serif",
  "textSans": "GuardianTextSans, "Guardian Text Sans Web", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif",
  "titlepiece": ""GT Guardian Titlepiece", Georgia, serif",
}
`;

exports[`typography matches existing token values in snapshot 4`] = `
{
  "loose": 1.4,
  "regular": 1.3,
  "tight": 1.15,
}
`;

exports[`typography matches existing token values in snapshot 5`] = `
{
  "bold": 700,
  "light": 300,
  "medium": 500,
  "regular": 400,
}
`;

exports[`typography matches existing token values in snapshot 6`] = `
{
  "body": {
    "bold": true,
    "regular": true,
  },
  "headline": {
    "bold": true,
    "light": true,
    "medium": true,
  },
  "textSans": {
    "bold": true,
    "regular": true,
  },
  "titlepiece": {
    "bold": true,
  },
}
`;

exports[`typography matches existing token values in snapshot 7`] = `
{
  "body": {
    "bold": true,
    "regular": true,
  },
  "headline": {
    "bold": false,
    "light": true,
    "medium": true,
  },
  "textSans": {
    "bold": false,
    "regular": true,
  },
  "titlepiece": {
    "bold": false,
  },
}
`;

exports[`typography matches existing token values in snapshot 8`] = `
{
  "body": {
    "medium": 2,
    "small": 2,
    "xsmall": 2,
  },
  "headline": {
    "large": 5,
    "medium": 4,
    "small": 3,
    "xlarge": 6,
    "xsmall": 3,
    "xxsmall": 3,
    "xxxsmall": 2,
  },
  "textSans": {
    "large": 3,
    "medium": 2,
    "small": 2,
    "xlarge": 3,
    "xsmall": 2,
    "xxlarge": 3,
    "xxsmall": 2,
    "xxxlarge": 4,
  },
  "titlepiece": {
    "large": 6,
    "medium": 6,
    "small": 5,
  },
}
`;

exports[`typography matches existing token values in snapshot 9`] = `
{
  "large": 20,
  "medium": 17,
  "small": 15,
  "xlarge": 24,
  "xsmall": 14,
  "xxlarge": 28,
  "xxsmall": 12,
  "xxxlarge": 34,
}
`;

exports[`typography matches existing token values in snapshot 10`] = `
{
  "medium": 17,
  "small": 15,
  "xsmall": 14,
}
`;

exports[`typography matches existing token values in snapshot 11`] = `
{
  "large": 42,
  "medium": 34,
  "small": 28,
  "xlarge": 50,
  "xsmall": 24,
  "xxsmall": 20,
  "xxxsmall": 17,
}
`;

exports[`typography matches existing token values in snapshot 12`] = `
{
  "large": 70,
  "medium": 50,
  "small": 42,
}
`;

exports[`typography matches existing token values in snapshot 13`] = `
{
  "large": 1.25,
  "medium": 1.0625,
  "small": 0.9375,
  "xlarge": 1.5,
  "xsmall": 0.875,
  "xxlarge": 1.75,
  "xxsmall": 0.75,
  "xxxlarge": 2.125,
}
`;

exports[`typography matches existing token values in snapshot 14`] = `
{
  "medium": 1.0625,
  "small": 0.9375,
  "xsmall": 0.875,
}
`;

exports[`typography matches existing token values in snapshot 15`] = `
{
  "large": 2.625,
  "medium": 2.125,
  "small": 1.75,
  "xlarge": 3.125,
  "xsmall": 1.5,
  "xxsmall": 1.25,
  "xxxsmall": 1.0625,
}
`;

exports[`typography matches existing token values in snapshot 16`] = `
{
  "large": 4.375,
  "medium": 3.125,
  "small": 2.625,
}
`;
